# umat_cpp

./: .gitignore  README.md  addf.cpp  an_ai  build.sh  determinant.cpp  umat_an_ai.f90
archive/dummy/: .gitignore  addf.cpp  build_dummy.sh  detc.cpp  main_dummy.f90
archive/fortran_calls_ts/: .gitignore  CMakeLists.txt  call_ts.h
archive/fortran_calls_ts/src/: call_ts.cpp  main.f90
archive/traced/: .gitignore  create_traced_example.py  traced_example.pt
cube_ts/: CMakeLists.txt  abaqus_v6.enva  abaqus_v6.envb  call_ts_export.h  clean.sh  compile.sh  lnx86_64.env  traced_example.pt
cube_ts/src/: compile.sh  dl_model.cpp  umat_an_ai.f90
dummy/: build_dummy.sh  main  main_dummy.f90  umat_dummy.f90
dummy_umat_ts/: .gitignore  CMakeLists.txt  call_ts.h
dummy_umat_ts/src/: main_ts.f90  umat_ts.f90
test/: test_torchscript.py
torchscript/: README.md  example-app.cpp  example.py  traced_example.pt
traced/: README.md  example-app.cpp
umat_ts/: .gitignore  CMakeLists.txt
umat_ts/src/: detc.cpp  dl_model.cpp  umat_an_ai.f90
